187 ==> 274529 : Crashes on startup in Mac OS X.
188 ==> 268817 : DK 2.0 beta 4 - crash when starting sw conversion.
189 ==> 264231 : CMakeList.txt opencv-check broken.
190 ==> 269084 : Crash when editing Geo-Location.
191 ==> 277157 : Wish: Copy to Clipboard.
192 ==> 262700 : Raw file will freeze with 16bit option enabled.
193 ==> 277133 : Additional patch needed to compile 2.0.0-rc with external libpgf.
194 ==> 261656 : Object::connect error messages when using decorate/add border.
195 ==> 270248 : digiKam crashes when clicking on a deleted folder.
196 ==> 272175 : Picture orientation is "forgotten" in viewer and light table when using xmp sidecar [patch].
197 ==> 275311 : XMP sidecars are not written for symbolic links [patch].
198 ==> 276712 : Ignore certain file types.
199 ==> 141730 : Page down/up goes to next/previous picture istead of scolling a page.
200 ==> 229795 : Position in album lost when switching album forth and back.
201 ==> 208506 : Switching between view does not hold the current image.
202 ==> 252134 : When selecting multiple images, some controls should be disabled.
203 ==> 270161 : Unclear how to get rid of tags.
204 ==> 269446 : Keyword-Managing: Folder "People" und subfolder "Unknown" persistent?
205 ==> 269445 : Not possible to select only one album INCLUDING subfolders to scan for faces.
206 ==> 277502 : All versions of version set always displayed in Album viewed.
207 ==> 271557 : Tags: missing order, no sorting.
208 ==> 265264 : Tag all images multiple Images are selected.
209 ==> 247659 : In big albums re-sorting thumbnails on opening right tab bar, move selected image out the screen [patch].
210 ==> 276923 : Crash during initial run of facial recognition.
211 ==> 276646 : Crash while trying to switch database sqlite -> mysql.
212 ==> 271622 : Local contrast settings are greyed out.
213 ==> 274947 : Auto-rotate/flip image does not work at import.
214 ==> 276450 : Versioning cuts image filenames after the first '.'.
215 ==> 